0.10.1/_sources/gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/plot_peak_integration.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/plot_peak_integration.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_integration.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_integration.py:


Integrate a baseline-corrected IR band
=====================================

This example shows how to baseline-correct a spectral region and compare
trapezoidal and Simpson integration on a sequence of IR spectra.

.. GENERATED FROM PYTHON SOURCE LINES 14-17

.. code-block:: default


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Load a stacked IR dataset and restrict the analysis to the band of interest.

.. GENERATED FROM PYTHON SOURCE LINES 19-32

.. code-block:: default


    dataset = scp.read_omnic("irdata/nh4y-activation.spg")
    band = dataset[:20, 1250.0:1800.0]
    band.y -= band.y[0]
    band.y.ito("min")
    band.y.title = "acquisition time"

    prefs = scp.preferences
    prefs.figure.figsize = (7, 3.5)
    prefs.colormap = "Dark2"
    prefs.colorbar = True
    _ = band.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_001.png
   :alt: plot peak integration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 33-34

Fit a polynomial baseline on three reference regions.

.. GENERATED FROM PYTHON SOURCE LINES 34-46

.. code-block:: default


    blc = scp.Baseline(model="polynomial", order=3)
    blc.ranges = (
        [1740.0, 1800.0],
        [1550.0, 1570.0],
        [1250.0, 1300.0],
    )
    blc.fit(band)

    corrected = blc.corrected
    _ = corrected.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_002.png
   :alt: plot peak integration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 47-48

Integrate each spectrum over the full selected region.

.. GENERATED FROM PYTHON SOURCE LINES 48-60

.. code-block:: default


    trapz_area = corrected.trapezoid(dim="x")
    simpson_area = corrected.simpson(dim="x")

    scp.plot_multiple(
        method="scatter",
        ms=5,
        datasets=[trapz_area, simpson_area],
        labels=["trapezoidal rule", "Simpson's rule"],
        legend="best",
    )




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_003.png
   :alt: plot peak integration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='acquisition time $\\mathrm{/\\ \\mathrm{min}}$', ylabel='area $\\mathrm{/\\ \\mathrm{a.u.} \\cdot \\mathrm{cm}^{-1}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 61-62

For this dataset both numerical methods are very close.

.. GENERATED FROM PYTHON SOURCE LINES 62-68

.. code-block:: default


    relative_difference = (trapz_area - simpson_area) * 100.0 / simpson_area
    relative_difference.title = "relative difference"
    relative_difference.units = "percent"
    _ = relative_difference.plot(scatter=True, ms=5)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_004.png
   :alt: plot peak integration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 69-71

This ends the example. Uncomment the next line to display the figures when
running the script directly with Python.

.. GENERATED FROM PYTHON SOURCE LINES 71-73

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.066 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_integration.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_peak_integration.py <plot_peak_integration.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_peak_integration.ipynb <plot_peak_integration.ipynb>`
