0.12.4/_sources/gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/plot_peak_integration.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/plot_peak_integration.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_integration.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_integration.py:


Integrate a baseline-corrected IR band
======================================

This example shows how to baseline-correct a spectral region and compare
trapezoidal and Simpson integration on a sequence of IR spectra.

.. GENERATED FROM PYTHON SOURCE LINES 14-17

.. code-block:: Python


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 18-20

Load and prepare the dataset
-----------------------------

.. GENERATED FROM PYTHON SOURCE LINES 20-32

.. code-block:: Python

    dataset = scp.read_omnic("irdata/nh4y-activation.spg")
    band = dataset[:20, 1250.0:1800.0]
    band.y -= band.y[0]
    band.y.ito("min")
    band.y.title = "acquisition time"

    prefs = scp.preferences
    prefs.figure.figsize = (7, 3.5)
    prefs.colormap = "Dark2"
    prefs.colorbar = True
    _ = band.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_001.png
   :alt: plot peak integration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 33-35

Fit a polynomial baseline
--------------------------

.. GENERATED FROM PYTHON SOURCE LINES 35-46

.. code-block:: Python

    blc = scp.Baseline(model="polynomial", order=3)
    blc.ranges = (
        [1740.0, 1800.0],
        [1550.0, 1570.0],
        [1250.0, 1300.0],
    )
    _ = blc.fit(band)

    corrected = blc.corrected
    _ = corrected.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_002.png
   :alt: plot peak integration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 47-49

Compare integration methods
----------------------------

.. GENERATED FROM PYTHON SOURCE LINES 49-60

.. code-block:: Python

    trapz_area = corrected.trapezoid(dim="x")
    simpson_area = corrected.simpson(dim="x")

    _ = scp.plot_multiple(
        method="scatter",
        ms=5,
        datasets=[trapz_area, simpson_area],
        labels=["trapezoidal rule", "Simpson's rule"],
        legend="best",
    )




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_003.png
   :alt: plot peak integration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 61-62

For this dataset both numerical methods are very close:

.. GENERATED FROM PYTHON SOURCE LINES 62-67

.. code-block:: Python

    relative_difference = (trapz_area - simpson_area) * 100.0 / simpson_area
    relative_difference.title = "relative difference"
    relative_difference.units = "percent"
    _ = relative_difference.plot(scatter=True, ms=5)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_004.png
   :alt: plot peak integration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_integration_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 68-70

This ends the example. Uncomment the next line to display the figures when
running the script directly with Python.

.. GENERATED FROM PYTHON SOURCE LINES 70-72

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.823 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_integration.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_peak_integration.ipynb <plot_peak_integration.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_peak_integration.py <plot_peak_integration.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_peak_integration.zip <plot_peak_integration.zip>`
